# checkList

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  checkList.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  handle.rs  main.rs  menu.rs  shortcut.rs  utils.rs
src-tauri/src/capabilities/: default.json
src/assets/css/: app.css
