[package]
version = "0.0.9"
name = "checkList"
description = "checkList"
authors = ["initialencounter <2911583893@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [ "macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tauri-plugin-dialog = "2.0.0-rc.0"
rdev = {version = "0.5.3", features = ["unstable_grab"] }
windows = {  version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse"
] }
lazy_static = "1.4.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-global-shortcut = "2.0.0-rc"
